# ALSE-2025-2-G2

./: .gitignore  csv_files  out1.txt  pdf_files  readme.md  script1.sh
ejemploClases/: CMakeLists.txt  Doxyfile  complex.cpp  vehicle.cpp
ejemploClases/docs/html/: Complex_8h_source.html  Cube_8h_source.html  Shape3d_8h.html  Shape3d_8h__dep__incl.map  Shape3d_8h__dep__incl.md5  Shape3d_8h_source.html  Sphere_8h.html  Sphere_8h__incl.map  Sphere_8h__incl.md5  Sphere_8h_source.html  annotated.html  classComplex-members.html  classComplex.html  classCube-members.html  classCube.html  classCube__inherit__graph.map  classCube__inherit__graph.md5  classShape3D-members.html  classShape3D.html  classShape3D__inherit__graph.map  classShape3D__inherit__graph.md5  classSphere-members.html  classSphere.html  classSphere__coll__graph.map  classSphere__inherit__graph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  (+1 more)
ejemploClases/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  related_0.js  (+6 more)
ejemploClases/docs/latex/: Shape3d_8h.tex  Shape3d_8h__dep__incl.md5  Sphere_8h.tex  Sphere_8h__incl.md5  annotated.tex  classCube.tex  classCube__inherit__graph.md5  classShape3D.tex  classShape3D__inherit__graph.md5  classSphere.tex  classSphere__inherit__graph.md5  files.tex  hierarchy.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
ejemploClases/include/: Cube.h  Shape3d.h  Sphere.h
ejemploClases/src/: Cube.cpp  Shape3d.cpp  Sphere.cpp  main.cpp
ejemplos_qt_cpp/NO_IDE/login/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
(+97 files in other folders)
