cmake_minimum_required(VERSION 3.10)

# Set the project name
project(EjemploClases)

include_directories(include)

# # Add the executable for CubeUnified.cpp
# add_executable(cubeUnified Example1.cpp)

# Add the executable for ComplexUnified.cpp
add_executable(ComplexUnified complex.cpp)

# # Add the executable for VehicleUnified.cpp 
# add_executable(VehicleUnified Vehicle.cpp)

# Add the executable for Cube.cpp
#add_executable(CubeSeparated src/Cube.cpp src/main.cpp)

# Add the executable for Complex.cpp
#add_executable(ComplexUnified src/Complex.cpp)

# Add the executable for Vehicle.cpp
#add_executable(VehicleUnified src/Vehicle.cpp)

